--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.0.1'
     implementation 'com.google.firebase:firebase-database:18.0.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
