--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
 
     implementation 'com.google.android.material:material:1.1.0-alpha08'
 
@@ -61,6 +59,14 @@ dependencies {
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+
+    //Konveyor for testing
+    implementation 'com.github.vacxe:konveyor:1.0.3'
+    testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
+    testImplementation "org.assertj:assertj-core:3.8.0"
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
