--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:networkSecurityConfig="@xml/network_security_config"
-            android:name=".RealmApplication">
+            android:name=".ConverterApplication">
 
 
         <activity android:name=".MainActivity">
