--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,9 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:2.25.4"
     implementation "com.google.dagger:dagger-android:2.25.4"
     implementation "com.google.dagger:dagger-android-support:2.25.4"
+
+    //Anko
+    implementation 'org.jetbrains.anko:anko-common:0.9'
 }
 
 apply plugin: 'com.google.gms.google-services'
