--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
 
     //Konveyor for testing
     implementation 'com.github.vacxe:konveyor:1.0.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
     testImplementation "org.assertj:assertj-core:3.8.0"
     testImplementation 'junit:junit:4.12'
